Fix carousel z-index: active card now renders on top

--- a/style.css
+++ b/style.css
@@ -1273,7 +1273,6 @@ a:hover {
   align-items: center;
   justify-content: center;
   perspective: 1500px;
-  transform-style: preserve-3d;
 }
 
 .depth-carousel__card {
